<resources>
    <string name="app_name">Mad_lab_03</string>
    <string name="name">Enter Your Name Here..</string>
    <string name="n">Name</string>
    <string name="mail">Email</string>
    <string name="Phone">Telephone</string>
    <string name="Pass">Password</string>
    <string name="pass2">Re-Type Password</string>
    <string name="btn01">Signup</string>
    <string name="btn02">Register</string>
    <string name="btn03">Cancel</string>
    <string name="channel_name">Hello</string>
    <string name="channel_description">Welcome To The MAD Team</string>
</resources>
